--- a/html/src/main/resources/com/objectstyle/demo/html/pages/News.tml
+++ b/html/src/main/resources/com/objectstyle/demo/html/pages/News.tml
@@ -4,7 +4,25 @@
 
 	<ul>
 		<t:loop t:source="newsList" t:value="article">
-			<li><span style="font-size:12px">[<t:output value="article.publishedOn" format="publishDateFormat"/>]</span> ${article.title}</li>
+			<li>
+				<span style="font-size:12px">
+					[
+					<t:output value="article.publishedOn" format="publishDateFormat" />
+					]
+				</span>
+				<t:actionlink t:id="articleLink" t:zone="articleZone"
+					context="articleId">${article.title}
+				</t:actionlink>
+			</li>
 		</t:loop>
 	</ul>
+
+	<t:zone t:id="articleZone" id="articleZone" visible="false">
+		<t:if test="clickedArticle">
+			<div style="background: #EEEEEE; width: 100%; height: 50%;">
+				<h2>${clickedArticle.title}</h2>
+				<div>${clickedArticle.body}</div>
+			</div>
+		</t:if>
+	</t:zone>
 </html>
