--- a/editor/src/main/resources/demo/editor/pages/Index.tml
+++ b/editor/src/main/resources/demo/editor/pages/Index.tml
@@ -1,4 +1,16 @@
 <html t:type="pagewrapper" title="'Home'"
 	xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd">
 	<h2>Welcome to Editor!</h2>
+	<ul>
+		<t:loop t:source="newsList" t:value="article">
+			<li>
+				<span style="font-size:12px">
+					[
+					<t:output value="article.publishedOn" format="publishDateFormat" />
+					]
+				</span>
+				<t:actionlink t:id="articlelink" context="articleId">${article.title}</t:actionlink>
+			</li>
+		</t:loop>
+	</ul>
 </html>
