--- a/editor/src/main/resources/demo/editor/pages/Index.tml
+++ b/editor/src/main/resources/demo/editor/pages/Index.tml
@@ -1,6 +1,6 @@
 <html t:type="pagewrapper" title="'Home'"
 	xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd">
-	<h2>Welcome to Editor!</h2>
+	<h2>Edit news:</h2>
 	<ul>
 		<li>
 			<t:actionlink t:id="newarticlelink">create new...</t:actionlink>
